<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tertiary400">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/tertiary400"
        tools:context=".fragments.statement.vehicle_a.VehicleAInsuranceNewStatementFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <TextView
                android:id="@+id/tv_statement_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="16dp"
                android:text="@string/new_statement_title"
                android:textAllCaps="true"
                android:textColor="@color/title"
                android:textSize="35sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/tv_statement_vehicle_a_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/statement_vehicle_a_title"
                android:textAllCaps="true"
                android:textColor="@color/primary800"
                android:textSize="35sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/border_outlined_blue"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/statement_insurance_company_title"
                    android:textAllCaps="true"
                    android:textColor="@color/primary800"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:text="@string/statement_insurance_description"
                    android:textColor="@color/primary800"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_policy_number"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_company_policy_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_green_card_number"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_company_green_card_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_insurance_cert_availability_date"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_company_certificate_availability_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_insurance_cert_expiration_date"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_company_certificate_expiration_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/statement_insurance_agency_title"
                    android:textAllCaps="true"
                    android:textColor="@color/primary800"
                    android:textSize="30sp"
                    android:textStyle="bold" />


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/name"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_agency_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/label_address"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_agency_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/label_country"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_agency_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/label_phone_number"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_agency_phone_number"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/label_email"
                    app:boxBackgroundColor="@color/input_field_background"
                    app:boxStrokeColor="@color/primary800">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_statement_vehicle_a_insurance_agency_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/input_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/cb_statement_damaged_covered"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/material_damage_covered_checkbox" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                android:paddingBottom="12dp">

                <Button
                    android:id="@+id/btn_statement_accident_previous"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/rounded_main_button"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/statement_back_button"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:id="@+id/btn_statement_accident_next"
                    android:layout_width="190dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/rounded_main_button"
                    android:paddingLeft="65dp"
                    android:paddingRight="65dp"
                    android:text="@string/statement_front_button"
                    tools:ignore="ButtonStyle" />

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</ScrollView>